<resources>
    <string name="app_name">UTXO</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="get">GET</string>
    <string name="min_amount_check">Min Amount Check</string>
    <string name="exchange_amount">Exchange Amount</string>
    <string name="response_info">RESPONSE INFO :</string>
    <string name="min_amount_info">Min Amount :</string>
    <string name="exchange_amount_info">EXCHANGE AMOUNT:</string>
    <string name="user_pay_out_address">Enter User Payout Address</string>
    <string name="create_transaction">Create Transaction</string>
    <string name="get_status">Get Status</string>
    <string name="transaction_id">Transaction Id</string>
    <string name="no_info">no info</string>
    <string name="get_status_info">STATUS :</string>
    <string name="extras">Extras</string>
    <string name="bitfinex_last_price">Bitcoin Price</string>
    <string name="zerodotzerozero">$ 0.00</string>
    <string name="twentyfourhourslow">24 Hr\'s Low</string>
    <string name="twentyfourhourshigh">24 Hr\'s High</string>
    <string name="twentyfourhoursvolume">24 Hr\'s Volume</string>
    <string name="zerovolume">0.00 Bitcoin</string>
    <string name="refresh">REFRESH</string>
    <string name="btc_price">Bitcoin Price</string>
    <string name="pay_in_address">PAY IN ADDRESS</string>

    <string name="label_google_sign_in">Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <!--
      Your Twitter Key and Secret, see README.
    -->
    <!-- TODO(developer): REPLACE -->
    <string name="twitter_consumer_key">REPLACE_ME</string>
    <string name="twitter_consumer_secret">REPLACE_ME</string>
    <string name="bitmex_announcement">BITMEX ANNOUNCEMENT</string>
    <string name="block_chain_explorer">BTC Blockchain Explorer</string>
    <string name="news">NEWS</string>
    <string name="explore">EXPLORE</string>
    <string name="explore_data">EXPLORE DATA</string>
    <string name="response_data">RESPONSE DATA</string>
    <string name="enter_address">ENTER ADDRESS</string>
    <string name="enter_block">ENTER BLOCK</string>
    <string name="enter_transaction">ENTER TRANSACTION</string>
    <string name="scan">SCAN</string>
    <string name="exchange">Exchange</string>
    <string name="address">address</string>
    <string name="hash160">hash160</string>
    <string name="balance">balance</string>
    <string name="received">received</string>
    <string name="sent">sent</string>
    <string name="transactions">transactions</string>
    <string name="utxos">utxos</string>
    <string name="unconfirmed_received">unconfirmed_received</string>
    <string name="unconfirmed_sent">unconfirmed_sent</string>
    <string name="unconfirmed_transactions">unconfirmed_transactions</string>
    <string name="unconfirmed_utxos">unconfirmed_utxos</string>
    <string name="total_transactions_in">total_transactions_in</string>
    <string name="total_transactions_out">total_transactions_out</string>
    <string name="hash">hash</string>
    <string name="version">version</string>
    <string name="height">height</string>
    <string name="block_time">block_time</string>
    <string name="arrival_time">arrival_time</string>
    <string name="nonce">nonce</string>
    <string name="difficulty">difficulty</string>
    <string name="byte_size">byte_size</string>
    <string name="confirmations">confirmations</string>
    <string name="value">value</string>
    <string name="miningpool_name">miningpool_name</string>
    <string name="miningpool_url">miningpool_url</string>
    <string name="miningpool_slug">miningpool_slug</string>
    <string name="block_hash">block_hash</string>
    <string name="first_seen_at">first_seen_at</string>
    <string name="last_seen_at">last_seen_at</string>
    <string name="block_height">block_height</string>
    <string name="is_coinbase">is_coinbase</string>
    <string name="estimated_value">estimated_value</string>
    <string name="total_input_value">total_input_value</string>
    <string name="total_output_value">total_output_value</string>
    <string name="total_fee">total_fee</string>
    <string name="estimated_change">estimated_change</string>
    <string name="estimated_change_address">estimated_change_address</string>
    <string name="high_priority">high_priority</string>
    <string name="enough_fee">enough_fee</string>
    <string name="input_list">input_list</string>
    <string name="expand_input_list">EXPAND INPUT LIST</string>
    <string name="index">index</string>
    <string name="output_hash">output_hash</string>
    <string name="output_index">output_index</string>
    <string name="type">type</string>
    <string name="multisig">multisig</string>
    <string name="script_signature">script_signature</string>
    <string name="expand_output_list">EXPAND OUTPUT LIST</string>
    <string name="script">script</string>
    <string name="script_hex">script_hex</string>
    <string name="spent_hash">spent_hash</string>
    <string name="spent_index">spent_index</string>

    <string-array name="spinner_explore_data">
        <item>Address</item>
        <item>Block</item>
        <item>Transaction</item>
    </string-array>
</resources>
