<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_get_min_amount"
            android:icon="@mipmap/min_amount_icon"
            android:title="@string/min_amount_check" />
        <item
            android:id="@+id/nav_exchange_amount"
            android:icon="@mipmap/exchange_amount_icon"
            android:title="@string/exchange_amount" />
        <item
            android:id="@+id/nav_create_transaction"
            android:icon="@mipmap/ic_launcher"
            android:visible="false"
            android:title="@string/create_transaction" />
        <item
            android:id="@+id/nav_get_status"
            android:icon="@mipmap/status_icon"
            android:title="@string/get_status" />
        <item
            android:id="@+id/nav_extras"
            android:icon="@mipmap/extras_icon"
            android:title="@string/extras" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/settings_icon"
            android:title="@string/action_settings" />
    </group>

</menu>
