<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:orientation="vertical"
        android:weightSum="8">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_btc_price"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/btc_price"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_bitmex_announcement"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/bitmex_announcement"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_block_chain_explorer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/block_chain_explorer"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_news"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/news"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>